--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:name="com.chaychan.news.app.MyApp"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.Slide">
 
         <activity
             android:name=".ui.activity.SplashActivity"
             android:screenOrientation="portrait"
             android:configChanges="keyboardHidden|screenSize|orientation"
+            android:theme="@style/AppTheme"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -29,6 +30,7 @@
             android:name=".ui.activity.MainActivity"
             android:screenOrientation="portrait"
             android:configChanges="keyboardHidden|screenSize|orientation"
+            android:theme="@style/AppTheme"
             >
 
         </activity>
