--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ android {
                     ]//res 目录的拆分
         }
     }
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
 }
 
 dependencies {
