更新apk;更新MultipleItemRvAdapter版本

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         </activity>
 
         <activity
-            android:name=".ui.activity.NewsDetailDetailActivity"
+            android:name=".ui.activity.NewsDetailActivity"
             android:screenOrientation="portrait"
             android:configChanges="keyboardHidden|screenSize|orientation"
             />
