--- a/uikit/build.gradle
+++ b/uikit/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:${rootProject.ext.supportVersion}'
+    compile "com.android.support:appcompat-v7:${rootProject.ext.supportVersion}"
     testCompile 'junit:junit:4.12'
     compile 'com.github.nukc.stateview:library:1.2.1'
     compile 'me.weyye.ColorTrackTabLayout:library:1.0.1'
