修改右滑依赖库；修改视频解析逻辑。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:name="com.chaychan.news.app.MyApp"
-        android:theme="@style/AppTheme.Slide">
+        android:theme="@style/AppTheme">
 
         <activity
             android:name=".ui.activity.SplashActivity"
