--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,6 @@ dependencies {
     compile 'org.litepal.android:core:1.5.0'
     compile project(':jcvideoplayer-lib')
     compile project(':statusbar-lib')
-    compile 'com.github.chaychan:SlideCloseLib:1.0.0'
+    compile 'com.github.anzewei:parallaxbacklayout:1.1.6'
     compile 'com.github.chaychan:MultipleItemRvAdapter:1.0.4'
 }
