1.升级gradle版本； 2.解决第三方依赖拉取不到编译不过的问题

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,14 @@ android {
     }
     configurations.all {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+            def requested = details.requested
+            if (requested.group == 'com.android.support') {
+                if (!requested.name.startsWith("multidex")) {
+                    details.useVersion '27.1.1'
+                }
+            }
+        }
     }
 }
 
